# python-project-lvl2

./: .gitignore  Makefile  README.md  gendiff.py  pyproject.toml  scetchbook.py  setup.cfg
.github/workflows/: main.yml  pytest.yml  wemake-python.yml
gendiff/: __init__.py  find_diff.py  formatter.py  generate_diff.py  parser.py
gendiff/formaters/: json_output.py  plain.py  stylish.py
gendiff/formatters/: json_output.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  run_gendiff.py
gendiff_package/formaters/: json_output.py  stylish.py
gendiff_package/scripts/: run_gendiff.py
tests/: conftest.py  expected_results.py  test.py  test_results.py
tests/expected_results/: json_case_result  json_case_result.txt  recursive.json
