[tool.poetry]
name = "hexlet-code"
version = "0.10.0"
description = ""
authors = ["andrew <isbushcar@gmail.com>"]
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.run_gendiff:main"

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
